# collab_orb_slam2

./: CMakeLists.txt  Dependencies.md  LICENSE.txt  README.md  build.sh  build_ros_compress.sh
Examples/ROS/compression/: CMakeLists.txt  manifest.xml
Examples/ROS/compression/msg/: msg_features.msg
Examples/ROS/compression/src/compression/: KittiAgentDepth.cpp  KittiAgentStereo.cpp  KittiServerDepth.cpp  KittiServerStereo.cpp
Vocabulary/: stats_8b.vstats
include/: Converter.h  Frame.h  FrameDrawer.h  FrameInfo.h  Initializer.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  Map.h  MapDatabase.h  MapDrawer.h  MapMerging.h  MapPoint.h  MultiAgentInfo.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  Optimizer.h  PnPsolver.h  Sensor.h  Sim3Solver.h  SlamConfig.h  System.h  Tracking.h  Viewer.h
src/: Converter.cc  Frame.cc  FrameDrawer.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDatabase.cc  MapDrawer.cc  MapMerging.cc  MapPoint.cc  MultiAgentInfo.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  Sim3Solver.cc  System.cc  Tracking.cc  Viewer.cc
